# steel

./: .coverage  .gitignore  .readthedocs.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: conf.py  errors.rst  fields.rst  getting-started.rst  index.rst  structures.rst
docs/fields/: bytes.md  bytes.rst  custom-fields.md  custom-fields.rst  datetime.rst  enum.rst  field.md  float_field.md  index.rst  numbers.md  numbers.rst  text.md  text.rst
docs/source/: conf.py  index.rst
docs/source/fields/: bytes.rst  custom-fields.rst  index.rst  numbers.rst  text.rst
src/steel/: __init__.py  base.py  types.py
src/steel/fields/: __init__.py  base.py  bytes.py  datetime.py  enum.py  nested.py  numbers.py  seek.py  text.py
steel/: __init__.py  base.py  types.py
steel/fields/: __init__.py  base.py  bytes.py  datetime.py  enum.py  numbers.py  text.py
tests/: __init__.py  test_base.py
tests/fields/: test_base.py  test_bytes.py  test_datetime.py  test_enum.py  test_nested.py  test_numbers.py  test_text.py
