[project]
name = "steel"
version = "0.2"
authors = [
  { name="Ginger Hawthorne", email="gulopine@gmail.com" },
]
description = "A Python framework for describing, reading and writing binary file formats"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: System :: Filesystems",
]
license = "BSD-3-Clause-No-Military-License"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "pytest>=8.4.1",
]

[project.urls]
Homepage = "https://importsteel.org/"
Issues = "https://github.com/gulopine/steel/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"

