[project]
name = "steel"
version = "0.2"
authors = [
  { name="Ginger Hawthorne", email="gulopine@gmail.com" },
]
description = "A Python framework for describing, reading and writing binary file formats"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: System :: Filesystems",
]
license = "BSD-3-Clause-No-Military-License"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "coverage>=7.10.5",
    "mkdocs>=1.6.1",
]

[project.urls]
Homepage = "https://importsteel.org/"
Issues = "https://github.com/gulopine/steel/issues"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.coverage.run]
branch = "true"

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
]

[tool.mypy]
strict = "true"
packages = ["steel", "tests"]

[[tool.mypy.overrides]]
module = "tests.*"
disable_error_code = "abstract,no-untyped-def"
