[project]
name = "steel"
version = "0.2"
authors = [
  { name="Ginger Hawthorne", email="gulopine@gmail.com" },
]
description = "A Python framework for describing, reading and writing binary file formats"
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: System :: Filesystems",
]
license = "BSD-3-Clause-No-Military-License"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "coverage>=7.10.5",
    "mkdocs>=1.6.1",
]

[project.urls]
Homepage = "https://importsteel.org/"
Issues = "https://github.com/gulopine/steel/issues"

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "rstfmt>=0.0.14",
    "ruff>=0.12.11",
]

[tool.coverage.run]
branch = "true"

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "pass",
    ": \\.\\.\\.",
    "if TYPE_CHECKING",
]

[tool.mypy]
strict = "true"
packages = ["steel", "tests"]

[[tool.mypy.overrides]]
module = "tests.*"
disable_error_code = "abstract,no-untyped-def"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = ["I001"]
